Back In Time

Version 0.9.22
* KDE4: fix a crush related to QString - python string conversion
* GNOME & KDE4 SettingsDialog: if schedule automatic backups per directory is set, global schedule is hidden
* GNOME FilesView: thread "*~" files (backup files) as hidden files
* GNOME: use gtk-preferences icon for SettingsDialog (replace gtk-execute icon)
* expert option: $XDG_CONFIG_HOME/backintime/user.callback (if exists) is called a different steps
  of a "take snapshot" process (before, after, on error, is a new snapshot was taken).
* add more command line options: --snapshots-list, --snapshots-list-path, --last-snapshot, --last-snapshot-path
* follow FreeDesktop directories specs:
  $XDG_DATA_HOME (default: $HOME/.local/share) to store app.lock files
  $XDG_CONFIG_HOME (default: $HOME/.config) to save settings
* new install system: use more common steps (./configure; make; sudo make install)

Version 0.9.20
* smart remove: fix an important bug and make it more verbose in syslog
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)

Version 0.9.18
* update translations from Launchpad
* update Slovak translation (Tomáš Vadina <kyberdev@gmail.com>)
* update French translation (Michel Corps <mahikeulbody@gmail.com>)
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* GNOME bugfix: fix a crush in files view for files with special characters (ex: "a%20b")
* GNOME SettingsDialog bugfix: if snapshots path is a new created folder, snapshots navigation (files view) don't work
* update doc
* GNOME & KDE4 MainWindow: Rename "Places" list with "Snapshots" 
* GNOME SettingsDialog bugfix: modify something, then press cancel. If you reopen the dialog it show wrong values (the ones before cancel)
* GNOME & KDE4: add root mode menu entries (use gksu for gnome and kdesudo for kde)
* GNOME & KDE4: MainWindow - Files view: if the current directory don't exists in current snapshot display a message