@@ -1,6 +1,7 @@
 Back In Time
 
 Version 0.9.22
+* create directory now use python os.makedirs (replace use of mkdir command)
 * KDE4: fix a crush related to QString - python string conversion
 * GNOME & KDE4 SettingsDialog: if schedule automatic backups per directory is set, global schedule is hidden
 * GNOME FilesView: thread "*~" files (backup files) as hidden files
